# rm_game_of_life

./: Cargo.toml  Makefile
.cargo/: config.toml
src/: game.rs  main.rs
