[package]
name = "rm_game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
libremarkable = "0.6.0"
log = "0.4.17"
once_cell = "1.13.0"
rand = "0.8.5"

[profile.release]
strip = true
